  (complementing :class:`IntSexpVector`, :class:`StrSexpVector`, and friends) 

- :meth:`colnames`, :meth:`rownames` for :class:`RArray` are now 
  property-style getters

- Crash when trying to create a SexpVector of a non-vector type

:mod:`rpy2.rlike`:

- :meth:`iteritems` for :class:`OrdDict` (formerly:class:`ArgDict`) 
  and :class:`TaggedList`


Changes
-------

- The setup.py script is now taking command-line arguments when specifying
  R library-related paths are wished. python setup.py --help build_ext will
  list them
  
:mod:`rpy2.robjects`:

- RS4 no longer makes R's slots as Python attributes through :meth:`__attr__`

- The package is split into modules

- The broken variables NA_STRING, NA_INTEGER, NA_LOGICAL, and NA_REAL are
  removed. The documentation on missing values was revised.

- :data:`globalEnv` and :data:`baseNameSpaceEnv` were renamed to 
  :data:`globalenv` and :data:`baseenv` respectively

- The parameter *wantFun* in :meth:`REnvironment.get` is now *wantfun* 

- :attr:`RVector.r` does not have a __getitem__ method any longer
  (see in `.rx` and `.rx2` in the new features)

- :meth:`colnames`, :meth:`rownames`, :meth:`nrow`, :meth:`ncol` 
  for :class:`RDataFrame` are now property-style getters

- :meth:`nrow`, :meth:`ncol` for :class:`RArray` 
  are now property-style getters

:mod:`rpy2.rinterface`:

- :data:`globalEnv`, :data:`baseNameSpaceEnv`, and :data:`emptyEnv` 
  were renamed to :data:`globalenv`, :data:`baseenv` and :data:`emptyenv`
  respectively

- The parameter *wantFun* in :meth:`SexpEnvironment.get` is now *wantfun* 

:mod:`rpy2.rlike`:

- :class:`ArgDict` becomes :class:`OrdDict`.


Bugs fixed
----------

- :meth:`REnvironment.get` now accepts a named parameter *wantFun*
  (like :meth:`rinterface.SexpEnvironment` does)

- :class:`rinterface.SexpVector` will now properly raise an exception
  when trying to create vector-like object of impossible type


Release 2.0.4
=============

Bugs fixed
----------
