@@ -20,7 +20,6 @@ class RS4(RObjectMixin, rinterface.SexpS4):
         name = conversion.py2ri(name)
         return methods_env['isClass'](name)
 
-
     def validobject(self, test = False, complete = False):
         test = conversion.py2ri(test)
         complete = conversion.py2ri(complete)
