@@ -124,14 +124,14 @@ class RVectorTestCase(unittest.TestCase):
     def testAssign(self):
         vec = robjects.r.seq(1, 10)
         i = array.array('i', [1, 3])
-        vec.assign(i, 20)
+        vec.assign(rlc.OrdDict(((None, i),)), 20)
         self.assertEquals(20, vec[0])
         self.assertEquals(2, vec[1])
         self.assertEquals(20, vec[2])
         self.assertEquals(4, vec[3])
 
         i = array.array('i', [1, 5])
-        vec.assign(rlc.TaggedList([i, ]), 50)
+        vec.assign(rlc.TaggedList.from_sequence([i, ]), 50)
         self.assertEquals(50, vec[0])
         self.assertEquals(2, vec[1])
         self.assertEquals(20, vec[2])
